--- a/index.html
+++ b/index.html
@@ -2,37 +2,196 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
-    </style>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+  </style>
 
 </head>
 
-<body>
-    <header>
-        <img src="../images/logo.png" alt="" class='logo' />
-        <div class='header_text'>
-            <p class="header_home">Home</p>
-            <p>Jobs</p>
-            <p>Upgrade account </p>
-            <p>Employer</p>
-            <p>About us</p>
-        </div>
-        <button class="button-01">Sign in</button>
-        <button class="button-02">Register</button>
-    </header>
-    <div class="header_banner">
-        <span> Work remotely from Anywhere for Globally Distributed Companies </span>
-        <div class="banner_search">
-            <div class="search">
-                <img src="../images/search.svg" alt=" " />
-                <input type="text" placeholder='Job title...' />
-            </div>
-            <button class="button-03">Find job now</button>
-        </div>
+<body class="body_job">
+  <header>
+    <img src='../images/logo.png' alt="" class='logo' />
+    <div class='header_text'>
+      <p class="header_home">Home</p>
+      <p>Jobs</p>
+      <p>Upgrade account </p>
+      <p>Employer</p>
+      <p>About us</p>
     </div>
+    <button class="button-01">Sign in</button>
+    <button class="button-02">Register</button>
+  </header>
+  <div class="header_banner">
+    <span> Work remotely from Anywhere for Globally Distributed Companies </span>
+    <div class="banner_search">
+      <div class="search">
+        <img src='../images/search.svg' alt=" " />
+        <input type="text" placeholder='Job title...' />
+      </div>
+      <button class="button-03">Find job now</button>
+    </div>
+  </div>
+  <div class="diff_form">
+    <h3>What makes Waw Asia Different?</h3>
+    <div class="services">
+      <div class="support">
+        <img src="../images/support.svg" alt="" />
+        <div class="info">
+          <h5>Support job sneekers </h5>
+          <p>Support from A-Z</p>
+        </div>
+      </div>
+      <div class="connect">
+        <img src="../images/connect.svg" alt="" />
+        <div class="info">
+          <h5>Direct connection</h5>
+          <p>Direct apply to Recruiters</p>
+        </div>
+      </div>
+      <div class="global">
+        <img src="../images/global.svg" alt="" />
+        <div class="info">
+          <h5>Global Companies</h5>
+          <p>Jobs from Global Companies</p>
+        </div>
+      </div>
+      <div class="remote">
+        <img src="../images/remote.svg" alt="" />
+        <div class="info">
+          <h5>Best remote jobs</h5>
+          <p>100% Remote Jobs</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="job_cates">
+    <h3>Job categories</h3>
+    <div class="cates01">
+      <div>
+        <button class="btn01">IT software / Engineer / Product</button>
+        <button>Marketing / Sales / Communication </button>
+        <button>Education / Translation </button>
+        <button>UX-UI design / Graphic design </button>
+        <button>Other flexible jobs</button>
+      </div>
+      <div>
+        <button class="btn02">HR & Recruiting Jobs</button>
+        <button>Accounting & Finance</button>
+        <button>Project Management Jobs</button>
+        <button>Math & Economics/ Research Jobs/ Science</button>
+      </div>
+    </div>
+  </div>
+  <div class="hotjobs">
+    <h3>Hot jobs this week</h3>
+    <div class="job_slide">
+      <div class="job_01">
+        <div class="job_title">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
+          resolve....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+      <div class="job_01">
+        <div class="job_title">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
+          resolve....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+      <div class="job_01">
+        <div class="job_title">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
+          resolve....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+      <div class="job_01">
+        <div class="job_title">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
+          resolve....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+
+    </div>
+
+  </div>
+  <div class="morejobs">
+    <h3>More jobs</h3>
+    <div class="job_border">
+      <div class="job_02">
+        <div class="job_title02">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
+          to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
+          observability, and security, built on one technology stack that can be deployed anywhere....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+
+    </div>
+
+  </div>
+  <div class="about_form">
+    <h3>About us</h3>
+
+
+
+  </div>
+
+  </div>
 </body>
 
 </html>
