--- a/index.html
+++ b/index.html
@@ -180,7 +180,62 @@
         </div>
         <h6>Job type: Full-time </h6>
       </div>
-
+      <div class="job_02">
+        <div class="job_title02">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
+          to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
+          observability, and security, built on one technology stack that can be deployed anywhere....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+    </div>
+    <div class="job_border">
+      <div class="job_02">
+        <div class="job_title02">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
+          to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
+          observability, and security, built on one technology stack that can be deployed anywhere....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
+      <div class="job_02">
+        <div class="job_title02">
+          <h4>Remote Support Engineer APAC</h4>
+          <img src="../images/heart.svg" alt="" />
+        </div>
+        <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
+          to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
+          observability, and security, built on one technology stack that can be deployed anywhere....</h5>
+        <div class="job_com">
+          <img src="../images/compass.svg" alt="" />
+          <h6>The Asia Pacific region</h6>
+        </div>
+        <div class="job_com">
+          <img src="../images/map.svg" alt="" />
+          <h6>Wage agreement</h6>
+        </div>
+        <h6>Job type: Full-time </h6>
+      </div>
     </div>
 
   </div>
