--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <button class="button-01">Sign in</button>
     <button class="button-02">Register</button>
   </header>
+
   <div class="header_banner">
     <span> Work remotely from Anywhere for Globally Distributed Companies </span>
     <div class="banner_search">
@@ -33,6 +34,7 @@
       <button class="button-03">Find job now</button>
     </div>
   </div>
+
   <div class="diff_form">
     <h3>What makes Waw Asia Different?</h3>
     <div class="services">
@@ -66,6 +68,7 @@
       </div>
     </div>
   </div>
+
   <div class="job_cates">
     <h3>Job categories</h3>
     <div class="cates01">
@@ -84,6 +87,7 @@
       </div>
     </div>
   </div>
+
   <div class="hotjobs">
     <h3>Hot jobs this week</h3>
     <div class="job_slide">
@@ -159,6 +163,7 @@
     </div>
 
   </div>
+
   <div class="morejobs">
     <h3>More jobs</h3>
     <div class="job_border">
@@ -180,7 +185,7 @@
         </div>
         <h6>Job type: Full-time </h6>
       </div>
-      <div class="job_02">
+      <div class="job_03">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
           <img src="../images/heart.svg" alt="" />
@@ -218,7 +223,7 @@
         </div>
         <h6>Job type: Full-time </h6>
       </div>
-      <div class="job_02">
+      <div class="job_03">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
           <img src="../images/heart.svg" alt="" />
@@ -237,16 +242,76 @@
         <h6>Job type: Full-time </h6>
       </div>
     </div>
-
   </div>
+
   <div class="about_form">
-    <h3>About us</h3>
-
+    <div>
+      <h3>About us</h3>
+      <h6>" A qualified Remote Job Portal which provides various remote jobs from reputable globally distributed
+        companies, given a priority of offering jobs for Asia-based talents. "</h6>
+      <div class="list_num">
+        <div class="num">
+          <h2>15000 +</h2>
+          <span>Candidate is on average job search/time</span>
+        </div>
+        <div class="num">
+          <h2>15000 +</h2>
+          <span>Enterprises using the service</span>
+        </div>
+        <div class="num02">
+          <h2>15000 +</h2>
+          <span>Employers use frequently</span>
+        </div>
+      </div>
+    </div>
 
 
   </div>
 
-  </div>
+  <footer>
+    <div class="info">
+      <img src="../images/logo2.svg" alt="" />
+      <p>The all-in-one platform for Remote Job Seekers</p>
+    </div>
+    <div class="i4_cates">
+      <h3>Waw Asia </h3>
+      <div class="cates_sth">
+        <h6>About us</h6>
+        <h6>FAQs for Job Seekers</h6>
+        <h6>FAQs for Employers</h6>
+        <h6>Jobs</h6>
+        <h6>Upgrade account</h6>
+      </div>
+    </div>
+    <div class="i4_mess">
+      <h3>Newsletter</h3>
+      <div class="mess_sth">
+        <h6>You can trust us. We only send promo offers
+          and helpful information, not a single spam.</h6>
+        <div class="mess_sth1">
+          <div class="search">
+            <input type="text" placeholder='  email...' />
+          </div>
+          <button class="button-03">SUBSCRIBE</button>
+        </div>
+      </div>
+    </div>
+    <div class="i4_follows">
+      <h3>Follow us </h3>
+      <div class="cates_sth">
+        <div>
+          <img src="../images/fb.svg" alt="facebook" />
+          <img src="../images/in.svg" alt="" />
+          <img src="../images/ig.svg" alt="" />
+        </div>
+        <div>
+          <img src="../images/tw.svg" alt="" />
+          <img src="../images/sn.svg" alt="" />
+          <img src="../images/zl.svg" alt="" />
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
