--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="body_job">
+<body>
   <header>
     <img src='../images/logo.png' alt="" class='logo' />
     <div class='header_text'>
