--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img src='../images/logo.png' alt="" class='logo' />
+    <img src='./images/logo.png' alt="" class='logo' />
     <div class='header_text'>
       <p class="header_home">Home</p>
       <p>Jobs</p>
@@ -28,7 +28,7 @@
     <span> Work remotely from Anywhere for Globally Distributed Companies </span>
     <div class="banner_search">
       <div class="search">
-        <img src='../images/search.svg' alt=" " />
+        <img src='./images/search.svg' alt=" " />
         <input type="text" placeholder='Job title...' />
       </div>
       <button class="button-03">Find job now</button>
@@ -39,28 +39,28 @@
     <h3>What makes Waw Asia Different?</h3>
     <div class="services">
       <div class="support">
-        <img src="../images/support.svg" alt="" />
+        <img src="./images/support.svg" alt="" />
         <div class="info">
           <h5>Support job sneekers </h5>
           <p>Support from A-Z</p>
         </div>
       </div>
       <div class="connect">
-        <img src="../images/connect.svg" alt="" />
+        <img src="./images/connect.svg" alt="" />
         <div class="info">
           <h5>Direct connection</h5>
           <p>Direct apply to Recruiters</p>
         </div>
       </div>
       <div class="global">
-        <img src="../images/global.svg" alt="" />
+        <img src="./images/global.svg" alt="" />
         <div class="info">
           <h5>Global Companies</h5>
           <p>Jobs from Global Companies</p>
         </div>
       </div>
       <div class="remote">
-        <img src="../images/remote.svg" alt="" />
+        <img src="./images/remote.svg" alt="" />
         <div class="info">
           <h5>Best remote jobs</h5>
           <p>100% Remote Jobs</p>
@@ -94,16 +94,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -111,16 +111,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -128,16 +128,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -145,16 +145,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -162,16 +162,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -179,16 +179,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -196,16 +196,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -213,16 +213,16 @@
       <div class="job_01">
         <div class="job_title">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>You will be ensuring technical customer issues are serviced within our contractual SLA and managed to
           resolve....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -238,17 +238,17 @@
       <div class="job_02">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
           to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
           observability, and security, built on one technology stack that can be deployed anywhere....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -256,17 +256,17 @@
       <div class="job_03">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
           to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
           observability, and security, built on one technology stack that can be deployed anywhere....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -276,17 +276,17 @@
       <div class="job_02">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
           to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
           observability, and security, built on one technology stack that can be deployed anywhere....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -294,17 +294,17 @@
       <div class="job_03">
         <div class="job_title02">
           <h4>Remote Support Engineer APAC</h4>
-          <img src="../images/heart.svg" alt="" />
+          <img src="./images/heart.svg" alt="" />
         </div>
         <h5>Elastic is a search company built on a free and open heritage. Anyone can use Elastic products and solutions
           to get started quickly and frictionlessly. Elastic offers three solutions for enterprise search,
           observability, and security, built on one technology stack that can be deployed anywhere....</h5>
         <div class="job_com">
-          <img src="../images/compass.svg" alt="" />
+          <img src="./images/compass.svg" alt="" />
           <h6>The Asia Pacific region</h6>
         </div>
         <div class="job_com">
-          <img src="../images/map.svg" alt="" />
+          <img src="./images/map.svg" alt="" />
           <h6>Wage agreement</h6>
         </div>
         <h6>Job type: Full-time </h6>
@@ -338,7 +338,7 @@
 
   <footer>
     <div class="info">
-      <img src="../images/logo2.svg" alt="" />
+      <img src="./images/logo2.svg" alt="" />
       <p>The all-in-one platform for Remote Job Seekers</p>
     </div>
     <div class="i4_cates">
@@ -368,14 +368,14 @@
       <h3>Follow us </h3>
       <div class="cates_sth">
         <div>
-          <img src="../images/fb.svg" alt="facebook" />
-          <img src="../images/in.svg" alt="" />
-          <img src="../images/ig.svg" alt="" />
+          <img src="./images/fb.svg" alt="facebook" />
+          <img src="./images/in.svg" alt="" />
+          <img src="./images/ig.svg" alt="" />
         </div>
         <div>
-          <img src="../images/tw.svg" alt="" />
-          <img src="../images/sn.svg" alt="" />
-          <img src="../images/zl.svg" alt="" />
+          <img src="./images/tw.svg" alt="" />
+          <img src="./images/sn.svg" alt="" />
+          <img src="./images/zl.svg" alt="" />
         </div>
       </div>
     </div>
